@@ -2,8 +2,10 @@ package com.gregtechceu.gtceu.integration.jade.provider;
 
 import com.gregtechceu.gtceu.GTCEu;
 import com.gregtechceu.gtceu.api.blockentity.MetaMachineBlockEntity;
+import com.gregtechceu.gtceu.api.machine.MetaMachine;
 import com.gregtechceu.gtceu.common.machine.storage.CreativeChestMachine;
 import com.gregtechceu.gtceu.common.machine.storage.QuantumChestMachine;
+import com.gregtechceu.gtceu.integration.ae2.machine.MEPatternBufferProxyPartMachine;
 import com.gregtechceu.gtceu.utils.GTMath;
 
 import net.minecraft.resources.ResourceLocation;
@@ -21,11 +23,12 @@ import snownee.jade.api.view.ItemView;
 import snownee.jade.api.view.ViewGroup;
 
 import java.util.ArrayList;
+import java.util.Collections;
 import java.util.List;
 
 /**
  * Custom ItemStack provider for any machines that require it
- * Currently: Quantum Chests
+ * Currently: Quantum Chests, Pattern Buffer Proxies
  * Defaults to Jade's normal ItemStack provider
  */
 public enum GTItemStorageProvider implements IServerExtensionProvider<MetaMachineBlockEntity, ItemStack>,
@@ -46,7 +49,8 @@ public enum GTItemStorageProvider implements IServerExtensionProvider<MetaMachin
     @Override
     public @Nullable List<ViewGroup<ItemStack>> getGroups(ServerPlayer serverPlayer, ServerLevel serverLevel,
                                                           MetaMachineBlockEntity mmbe, boolean b) {
-        if (mmbe.getMetaMachine() instanceof QuantumChestMachine qcm) {
+        MetaMachine machine = mmbe.getMetaMachine();
+        if (machine instanceof QuantumChestMachine qcm) {
             ItemStack stored = qcm.getStored();
             long amount = qcm.getStoredAmount();
             if (qcm instanceof CreativeChestMachine ccm) {
@@ -56,8 +60,13 @@ public enum GTItemStorageProvider implements IServerExtensionProvider<MetaMachin
             for (int stack : GTMath.split(amount)) {
                 list.add(stored.copyWithCount(stack));
             }
-            return list.isEmpty() ? List.of() : List.of(new ViewGroup<>(list));
+            return list.isEmpty() ? Collections.emptyList() : List.of(new ViewGroup<>(list));
+        } else if (machine instanceof MEPatternBufferProxyPartMachine proxy) {
+            var buffer = proxy.getBuffer();
+            if (buffer == null) return Collections.emptyList();
+            return ItemStorageProvider.INSTANCE.getGroups(serverPlayer, serverLevel, buffer.holder, b);
         }
+
         return ItemStorageProvider.INSTANCE.getGroups(serverPlayer, serverLevel, mmbe, b);
     }
 }
